<resources>
    <string name="app_name">SCOS</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="title_welcome">欢迎</string>
    <string name="title_ordering">点菜</string>
    <string name="title_myorder">查看订单</string>
    <string name="title_login">登录/注册</string>
    <string name="title_help">系统帮助</string>
    <string name="title_activity_login_or_register">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_up">注册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid">输入内容不符合规则</string>
    <string name="error_incorrect_password">用户名或密码错误</string>
    <string name="error_username_required">用户名不能为空</string>
    <string name="error_password_required">密码不能为空</string>

    <string name="title_activity_food_view">FoodView</string>
    <string name="food_ordering">点菜</string>
    <string name="food_return">退点</string>
    <string name="ordered_food">已点菜品</string>
    <string name="look_order">查看订单</string>
    <string name="call_service">呼叫服务</string>
    <string name="title_activity_food_order_view">FoodOrderView</string>
    <string name="order_number">总数：0</string>
    <string name="order_price">总价：¥0</string>
    <string name="order_submit">提交订单</string>
    <string name="order_pay">结账</string>
    <string name="title_activity_food_detailed">FoodDetailed</string>
    <string name="default_food_name">水煮肉片</string>
    <string name="default_food_price">¥ 30</string>
    <string name="default_comment">写一些备注吧</string>
    <string name="submit_comment">提交备注</string>
    <string name="title_activity_scoshelper">SCOSHelper</string>
    <string name="use_contact_helper">用户使用协议</string>
    <string name="system_helper">关于系统</string>
    <string name="phone_manul_helper">电话人工帮助</string>
    <string name="sms_helper">短信帮助</string>
    <string name="email_helper">邮件帮助</string>
</resources>
