<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_ordering"
        android:icon="@drawable/ic_restaurant_black_24dp"
        android:title="@string/title_ordering"
        android:orderInCategory="0"/>

    <item
        android:id="@+id/navigation_myorder"
        android:icon="@drawable/ic_menu_black_24dp"
        android:title="@string/title_myorder"
        android:orderInCategory="1"/>

    <item
        android:id="@+id/navigation_login"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_login"
        android:orderInCategory="2"/>

    <item
        android:id="@+id/navigation_help"
        android:icon="@drawable/ic_help_black_24dp"
        android:title="@string/title_help"
        android:orderInCategory="3"/>

</menu>
