<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    app:cardCornerRadius="10dp"
    app:cardElevation="20dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-light"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/default_food_name" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:text="@string/default_food_price" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <ImageView
            android:id="@+id/food_image"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:layout_width="240dp"
            android:layout_height="280dp" />


        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/order_status"
            android:layout_width="wrap_content"
            android:text="@string/food_ordering"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_comment"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/default_comment"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/submit_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_comment"/>
        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>